<resources>
    <string name="app_name">QuizApp</string>
    <string name="e_g_john_doe">e.g. John Doe</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter your name!</string>
    <string name="welcome">Welcome!</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="country_flag_question">What country does this flag belong too?</string>
    <string name="submit">SUBMIT</string>
    <string name="country_image">Country Image</string>
    <string name="finish">FINISH</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="tvProgress">"$currentPosition" } + "/" + progressBar?.max</string>
    <string name="congratulations">Congratulations!</string>
    <string name="image">image</string>
    <string name="result">Result</string>
</resources>