<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/quizapp_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="@string/welcome"
               android:textSize="30sp"
               android:textStyle="bold" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="@string/enter_your_name"
               android:textSize="16sp"
               android:layout_marginTop="16dp"
               android:textStyle="bold"
               android:textColor="#7A8089"
               android:labelFor="@+id/nameEditText"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_marginTop="20dp"
               android:contentDescription="@string/e_g_john_doe"
               >
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/nameEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:textColorHint="#7A8089"
                   tools:ignore="ContentDescription"
                   android:hint="@string/e_g_john_doe"

                  />
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:id="@+id/startButton"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:text="@string/start"
               />

       </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>